--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -2,11 +2,9 @@ version: '2'
 services:
     jhgrad-app:
         image: jhgrad
-        external_links:
-            - jhgrad-postgresql:postgresql
         environment:
             - SPRING_PROFILES_ACTIVE=prod,swagger
-            - SPRING_DATASOURCE_URL=jdbc:postgresql://postgresql:5432/jhgrad
+            - SPRING_DATASOURCE_URL=jdbc:postgresql://jhgrad-postgresql:5432/jhgrad
             - JHIPSTER_SLEEP=10 # gives time for the database to boot before the application
         ports:
             - 8080:8080
