--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 environment:
-  - node_version: "6"
-  - JAVA_HOME: C:\Program Files\Java\jdk1.8.0
+  node_version: "6"
+  JAVA_HOME: C:\Program Files\Java\jdk1.8.0
 
 skip_commits:
   message: /\[ci skip\]/
