--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ install:
   - ps: Install-Product node $env:node_version
   - yarn install
   - echo %PATH%
+  - dir
   - java -version
   - mvnw.cmd --version
 
